Gabi - Fixed title alignment

--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -1,6 +1,7 @@
 .title {
 	font-style: italic;
-	padding: 1.5rem;
+	font-size: 2rem;
+	padding: 0 1.5rem;
 	text-align: center;
-	margin-bottom: 3rem;
+	margin: 0 0 2rem 0;
 }
