--- a/app/assets/stylesheets/components/_trend.scss
+++ b/app/assets/stylesheets/components/_trend.scss
@@ -3,7 +3,7 @@
 .trend-bar {
 	margin: 5rem auto;
 	position: relative;
-	width: 11rem;
+	width: 12.5rem;
 }
 
 .trend-bar-counter {
@@ -22,7 +22,7 @@
 
 .bars {
 	font-size: 0;
-	width: 12rem;
+	width: 16rem;
 	height: 1.5rem;
 }
 
